--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -1,5 +1,14 @@
-@import "bootstrap";
+# app/styles/app.scss
+@import 'bootstrap';
 
 body {
   padding-top: 20px;
+}
+
+html {
+  overflow-y: scroll;
+}
+
+.library-item {
+  min-height: 150px;
 }
