--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -23,6 +23,7 @@
               <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Admin<span class="caret"></span></a>
               <ul class="dropdown-menu">
                   {{#nav-link-to 'admin.invitations'}}Invitations{{/nav-link-to}}
+                  {{#nav-link-to 'admin.seeder'}}Seeder{{/nav-link-to}}
                  
               </ul>
           </li>
