--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -14,8 +14,7 @@
       <ul class="nav navbar-nav">
             {{#nav-link-to 'index'}}Home{{/nav-link-to}}
             {{#nav-link-to 'libraries'}}Libraries{{/nav-link-to}}
-            {{#nav-link-to 'about'}}About{{/nav-link-to}}
-           
+            {{#nav-link-to 'authors'}}Authors{{/nav-link-to}} 
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
